--- a/Romanian/main/Settings.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Settings.apk/res/values-ro/strings.xml
@@ -569,7 +569,7 @@ Conexiunea utilizează semnale Bluetooth de putere redusă."</string>
     <string name="bluetooth_unlock_add_device">Adăugaţi un dispozitiv</string>
     <string name="bluetooth_unlock_change_device_confirm_msg">Vechiul dispozitiv va fi înlocuit cu dispozitivul actual.</string>
     <string name="bluetooth_unlock_change_matched_device">Selectaţi alt dispozitiv</string>
-    <string name="bluetooth_unlock_confirm_device_text">Atingeți dispozitivele pentru deblocare.</string>
+    <string name="bluetooth_unlock_confirm_device_text">Atingeți dispozitivul Bluetooth pentru a confirma.</string>
     <string name="bluetooth_unlock_delete_device">Ştergeţi acest dispozitiv</string>
     <string name="bluetooth_unlock_delete_device_confirm_msg">Ştergeţi acest dispozitiv?</string>
     <string name="bluetooth_unlock_device_matched_text">Utilizați acest dispozitiv pentru a debloca.</string>
@@ -2719,28 +2719,28 @@ Pentru a utiliza fixarea ecranului:
     <string name="sdcard_unmount">Demontaţi cardul SD</string>
     <string name="se_route_ese">Element de securitate încorporat</string>
     <string name="se_route_uicc">Element de securitate pe cartela SIM</string>
-    <string name="search_about">"Informații telefon;Numne dispozitiv;Număr model;Versiune Android;Versiune Miui;Procesor;RAM;Memorie internă;Versiunea benzii de bază;Versiune Kernel;Număr model;Stare;Informații de ordin juridic "</string>
-    <string name="search_accelerometer">accelerometru</string>
-    <string name="search_access_control">controlul accesului</string>
-    <string name="search_accessibility">accesibilitate</string>
+    <string name="search_about">"Informații telefon;Nume dispozitiv;Număr model;Versiune Android;Versiune MiUI;Procesor;RAM;Memorie internă;Versiunea benzii de bază;Versiune Kernel;Număr model;Stare;Informații de ordin juridic "</string>
+    <string name="search_accelerometer">Rotire automată a ecranului;Rotirea ecranului;Orientare;Portret;Peisaj</string>
+  <string name="search_access_control">Setări confidențialitate;Securitatea confidențialității;Vizitator;Mod vizitator</string>
+    <string name="search_accessibility">Accesibilitate</string>
     <string name="search_accessibility_captioning_title">Subtitrări</string>
-    <string name="search_accessibility_display_daltonizer_preference_title">Corecție de culoare</string>
-    <string name="search_accessibility_global_gesture_preference_title">Scurtătură accesibilitate</string>
-    <string name="search_accessibility_long_press_timeout_preference_title">Întârziere la atingere continuă</string>
-    <string name="search_accessibility_screen_magnification_title">Gesturi magnificare</string>
+  <string name="search_accessibility_display_daltonizer_preference_title">Color correction;Culoare</string>
+  <string name="search_accessibility_global_gesture_preference_title">Accessibility shortcut;Accesibilitate</string>
+  <string name="search_accessibility_long_press_timeout_preference_title">Întârziere la atingerea continuă;Touch and hold delay;Touch and hold;Întârziere</string>
+  <string name="search_accessibility_screen_magnification_title">Gesturi pentru magnificare;Magnificare</string>
     <string name="search_accessibility_settings">Accesibilitate</string>
-    <string name="search_account_list">Alte conturi</string>
-    <string name="search_airplane">Mod Avion</string>
-    <string name="search_alarm_sound_title">Sunet alarmă</string>
-    <string name="search_android_beam">NFC;beam</string>
+  <string name="search_account_list">Alte conturi;Cont;Conturi</string>
+  <string name="search_airplane">Mod avion;Aeroplane mode;Flight mode;Avion;Aeroplane;Flight</string>
+  <string name="search_alarm_sound_title">Sunet alarmă;alarm ringtone;alarm</string>
+  <string name="search_android_beam">NFC;Android Beam;Beam</string>
     <string name="search_apn_settings">APN;Numele punctelor de acces</string>
-    <string name="search_app_invisible">Aplicații invizibile</string>
+  <string name="search_app_invisible">Aplicație invizibilă;Aplicații invizibile</string>
     <string name="search_app_permission">Permisiuni;Acces root</string>
-    <string name="search_app_switch_key">Recente</string>
+  <string name="search_app_switch_key">Recente;Recent;Afișare meniu;Butoane;Afișarea aplicațiilor curente</string>
     <string name="search_application_lock">Blocarea aplicațiilor</string>
     <string name="search_application_settings">Aplicații instalate</string>
-    <string name="search_back_key">Înapoi</string>
-    <string name="search_battery">Acumulator și performanță</string>
+  <string name="search_back_key">Înapoi;Tasta Înapoi</string>
+  <string name="search_battery">Acumulator și performanță;Battery and performance;Acumulator;performanță;Economisire acumulator;Save battery</string>
     <string name="search_battery_indicator">Indicator acumulator</string>
     <string name="search_bluetooth">Bluetooth;Nume dispozitiv;Detectare activată</string>
     <string name="search_bluetooth_device_name">Nume dispozitiv</string>
