--- a/Romanian/main/Contacts.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Contacts.apk/res/values-ro/strings.xml
@@ -215,7 +215,7 @@ Cartelele de contact sunt dezactivate"</string>
     <string name="contact_detail_miprofile_request_success_toast">Solicitare trimisă</string>
     <string name="contact_detail_miprofile_save">Apăsați pentru a obține cartela de contact</string>
     <string name="contact_detail_miprofile_save_fail_toast">Nu s-a putut obține cartela de contact</string>
-    <string name="contact_detail_miprofile_save_success_toast">Se recepționează cartela de contact</string>
+    <string name="contact_detail_miprofile_save_success_toast">Cartela de contact a fost recepționată</string>
     <string name="contact_detail_miprofile_settings_header">SETĂRI ADIŢIONALE</string>
     <string name="contact_detail_miprofile_subtitle">Cartele schimbate deja</string>
     <string name="contact_detail_profile_switch_fail_network_toast">Nu se poate conecta la rețea</string>
@@ -451,7 +451,7 @@ Motivul: „%s”"</string>
     <string name="force_touch_miprofile">Carte de vizită</string>
     <string name="force_touch_new_contact">Contact nou</string>
     <string name="foundTooManyContacts">S-au găsit peste %d contacte</string>
-    <string name="fraud_more_indemnity">Mai multe asigurări</string>
+    <string name="fraud_more_indemnity">Mai multe</string>
     <string name="frequentList">Frecvent</string>
     <string name="from_account_format">%1$s</string>
     <string name="full_name">Nume</string>
@@ -671,7 +671,7 @@ Motivul: „%s”"</string>
     <string name="miprofile_finding_label">Găsire cartele de contact</string>
     <string name="miprofile_name">Profilul meu</string>
     <string name="miprofile_nick_name_divider">"  |  "</string>
-    <string name="miprofile_nick_name_edit">Editați pseudonimul cartelei</string>
+    <string name="miprofile_nick_name_edit">"Editați pseudonimul persoanei"</string>
     <string name="miprofile_nick_name_edit_dialog_hint">Introduceți pseudonimul</string>
     <string name="miprofile_nick_name_edit_dialog_message">Pseudonimul va apărea în istoricul apelurilor și informațiile de profil</string>
     <string name="miprofile_nick_name_edit_dialog_title">Editați pseudonimul</string>
@@ -1100,13 +1100,13 @@ Apăsaţi pictograma Îmbinare de mai jos pentru a începe.</string>
     <string name="success_message_import_from_account">Import finalizat</string>
     <string name="summary_kind_title">Rezumat</string>
     <string name="t9_search_guide_pinyin_title1">Căutați rapid contactele introducând literele de început</string>
-    <string name="t9_search_guide_pinyin_title2">Tastați 9 și 4 pentru a căuta &lt;font fgcolor=""&gt;X&lt;/font&gt;enia &lt;font fgcolor=""&gt;H&lt;/font&gt;oney</string>
+    <string name="t9_search_guide_pinyin_title2">Tastați 2 și 4 pentru a căuta &lt;font fgcolor=""&gt;A&lt;/font&gt;drian &lt;font fgcolor=""&gt;I&lt;/font&gt;onescu</string>
     <string name="t9_search_guide_zhuyin_title1">Căutați rapid contactele introducând literele de început</string>
-    <string name="t9_search_guide_zhuyin_title2">Tastați 5 și 6 pentru a căuta &lt;font fgcolor=""&gt;J&lt;/font&gt;eff &lt;font fgcolor=""&gt;M&lt;/font&gt;ax</string>
+    <string name="t9_search_guide_zhuyin_title2">Tastați 8 și 2 pentru a căuta &lt;font fgcolor=""&gt;T&lt;/font&gt;atiana &lt;font fgcolor=""&gt;C&lt;/font&gt;azacu</string>
     <string name="take_new_photo">Creaţi o fotografie nouă</string>
     <string name="take_photo">Fotografiaţi</string>
     <string name="telecom_fraud_insurance">Asigurare Telecom împotriva fraudelor</string>
-    <string name="telecom_fraud_insurance_description">Garantat 10,000 RMB | Personalizare Xiaomi | 9,9 RMB/an</string>
+    <string name="telecom_fraud_insurance_description">Asigurare de 10,000 CNY | Ofertă specială Xiaomi | Doar 9,9 CNY/an</string>
     <string name="titleJoinContactDataWith">Asociaţi intrările din agendă</string>
     <string name="title_other_devices">Alte dispozitive disponibile</string>
     <string name="title_paired_devices">Dispozitive asociate</string>
